end of part 5: Combining Model, View, and Template

--- a/meeting_planner/website/templates/website/welcome.html
+++ b/meeting_planner/website/templates/website/welcome.html
@@ -13,6 +13,7 @@
         <em>Django: Getting started</em>
         on <a href="https://www.pluralsight.com">Pluralsight</a>
     </p>
-    {{message}}
+    <p>There are currently {{num_meetings}} meetings in the database.</p>
+    
 </body>
 </html>
