--- a/meeting_planner/meetings/templates/meetings/detail.html
+++ b/meeting_planner/meetings/templates/meetings/detail.html
@@ -12,5 +12,7 @@
         This meeting has been scheduled on {{meeting.date}}, at {{meeting.start_time}}
         in <strong>{{meeting.room}}</strong>.
     </p>
+
+    <a href="{% url 'welcome' %}">Home</a>
 </body>
 </html>
