End of Chapter 7 Templates, CSS and static content

--- a/meeting_planner/website/templates/website/welcome.html
+++ b/meeting_planner/website/templates/website/welcome.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% comment %} load static here, loaded only in template gives an error {% endcomment %}
+{% load static %}
+{% block title %}Welcome{% endblock title %}
+
+{% block content %}
     <h1>Welcome to the meeting planner!</h1>
     <p>
         This is the demo application for the course
         <em>Django: Getting started</em>
         on <a href="https://www.pluralsight.com">Pluralsight</a>
     </p>
+
+    {% comment %} <img src="{% static 'website/beer.jpeg' %}" width="250px">  {% endcomment %}
+    <img src="{% static 'website/calendar.png' %}" width="50px">     
 
     <h2>Meetings</h2>
     <ul>
@@ -25,6 +25,4 @@
     </ul>
 
     <a href="{% url 'rooms' %}">Rooms list</a>
-    
-</body>
-</html>
+{% endblock content %}
