--- a/meeting_planner/meetings/templates/meetings/detail.html
+++ b/meeting_planner/meetings/templates/meetings/detail.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting: {{meeting.title}}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Meeting: {{meeting.title}}{% endblock title %}
+
+{% block content %}
     <h1>{{meeting.title}}</h1>
     <p>
         This meeting has been scheduled on {{meeting.date}}, at {{meeting.start_time}}
@@ -14,5 +10,4 @@
     </p>
 
     <a href="{% url 'welcome' %}">Home</a>
-</body>
-</html>
+{% endblock content %}
